[package]
name = "env2js"
version = "1.0.0"
authors = ["Alexander Kureniov <928021-m03geek@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  dotenv = "0.15.0"
  clap = "2.33.0"
  serde_json = "1.0"